# mxm-runtime

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: smoke_runtime_context.py
src/mxm/runtime/: __init__.py  attestation.py  build.py  context.py  discovery.py  identity.py  validation.py
tests/unittests/: test_attestation.py  test_build.py  test_context.py  test_discovery.py  test_identity.py  test_validation.py
